--- a/ds/queue/Queue.ipynb
+++ b/ds/queue/Queue.ipynb
@@ -120,11 +120,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Circular Queue\n",
+    "\n",
+    "### General Info: \n",
+    "A more efficient way is to use a circular queue. Specifically, we may use a fixed-size array and two pointers to indicate the starting position and the ending position. And the goal is to reuse the wasted storage we mentioned previously.\n",
+    "\n",
+    "![title](circ_que.gif)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class MyCircularQueue:\n",
+    "    \n",
+    "\n",
+    "    def __init__(self, k: int):\n",
+    "        \"\"\"\n",
+    "        Initialize your data structure here. Set the size of the queue to be k.\n",
+    "        \"\"\"\n",
+    "        self.MAX = k\n",
+    "        self.circ_que = []\n",
+    "        \n",
+    "\n",
+    "    def enQueue(self, value: int) -> bool:\n",
+    "        \"\"\"\n",
+    "        Insert an element into the circular queue. Return true if the operation is successful.\n",
+    "        \"\"\"\n",
+    "        if (self.isFull()):\n",
+    "            #queue is full\n",
+    "            return False\n",
+    "        else:\n",
+    "            self.circ_que.append(value)\n",
+    "            \n",
+    "            \n",
+    "            return True\n",
+    "        \n",
+    "\n",
+    "    def deQueue(self) -> bool:\n",
+    "        \"\"\"\n",
+    "        Delete an element from the circular queue. Return true if the operation is successful.\n",
+    "        \"\"\"\n",
+    "        if (self.isEmpty()):\n",
+    "            return False\n",
+    "        else:\n",
+    "            self.circ_que.pop(0)\n",
+    "            \n",
+    "            return True\n",
+    "        \n",
+    "\n",
+    "    def Front(self) -> int:\n",
+    "        \"\"\"\n",
+    "        Get the front item from the queue.\n",
+    "        \"\"\"\n",
+    "        if (self.isEmpty()):\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return self.circ_que[0]\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    def Rear(self) -> int:\n",
+    "        \"\"\"\n",
+    "        Get the last item from the queue.\n",
+    "        \"\"\"\n",
+    "        if (self.isEmpty()):\n",
+    "            return -1\n",
+    "        else:\n",
+    "            return self.circ_que[len(self.circ_que)-1]\n",
+    "        \n",
+    "\n",
+    "    def isEmpty(self) -> bool:\n",
+    "        \"\"\"\n",
+    "        Checks whether the circular queue is empty or not.\n",
+    "        \"\"\"\n",
+    "        return (len(self.circ_que)==0)\n",
+    "        \n",
+    "\n",
+    "    def isFull(self) -> bool:\n",
+    "        \"\"\"\n",
+    "        Checks whether the circular queue is full or not.\n",
+    "        \"\"\"\n",
+    "        return (len(self.circ_que)==self.MAX)\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Your MyCircularQueue object will be instantiated and called as such:\n",
+    "# obj = MyCircularQueue(k)\n",
+    "# param_1 = obj.enQueue(value)\n",
+    "# param_2 = obj.deQueue()\n",
+    "# param_3 = obj.Front()\n",
+    "# param_4 = obj.Rear()\n",
+    "# param_5 = obj.isEmpty()\n",
+    "# param_6 = obj.isFull()"
+   ]
   }
  ],
  "metadata": {
